# etl_mas

./: .env  .gitignore  Dockerfile  LICENSE.md  README.md  config.yml  docker-compose-yml  docker-compose.yml  main.py  pyproject.toml  test_components.ipynb
init_db/: 1_Create_Table.sql  2_Insert_Data.sql
knowledge_base/persistant/: MOCK_DATA.csv  best_selling_artists.csv
notebooks/: ChinookData.json  data_extractor.ipynb  data_loader.ipynb  deeplake.ipynb  schema_analyzer.ipynb  schema_analyzer_example.ipynb  schema_modeler_agent.ipynb  test_data_analyst.ipynb
prompts/data_analyst/: system_prompt.txt
prompts/data_extractor/: system_prompt.txt
prompts/etl_agent/: system_prompt.txt
prompts/schema_modeler/: message_prompt.txt  system_prompt.txt
utils/: __init__.py  agent_state.py  custom_tools.py  data_analyst.py  data_extractor.py  etl_agent.py  helper_utils.py  orchestrator.py  schema_analyzer.py  schema_modeler_agent.py
