[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl_mas"
version = "0.1.0"
authors = [
  { name = "Meric Kaynak", email = "mmk23.business@email.com" }
]
readme = "README.md"
license = "Apache-2.0"  # SPDX-konform
requires-python = ">=3.9"

dependencies = [
  "requests>=2.31.0",
  "pytest>=8.0.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "tiktoken",
  "langchain-community",
  "gradio",
  "psycopg2",
  "langchain_tavily",
  "langgraph-checkpoint-sqlite",
  "aiosqlite","langchain[openai]",
  "langchain-experimental",
  "langgraph",
  "streamlit",
  "langchain-google-genai"
]


[project.urls]
Repository = "https://github.com/merickaynak/etl_mas"

[tool.setuptools]
packages = [
  "prompts",
  "knowledge_base",
  "utils",
  "temp_uploads"
]
